--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -1,11 +1,3 @@
-html {
-  font-size: 16px; }
-
-a {
-  color: #ffffff; }
-  a:hover {
-    color: #f3a10d; }
-
 .header {
   text-transform: uppercase; }
 
@@ -15,6 +7,41 @@ a {
 .header, .main_sect .main_sect_container {
   font-family: 'Uni Sans Heavy Caps', sans-serif;
   font-weight: 900; }
+
+html {
+  font-size: 16px; }
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1264px; } }
+
+a {
+  color: #ffffff; }
+  a:hover {
+    color: #f3a10d; }
+
+@-webkit-keyframes animatedBackground {
+  0 {
+    background-position: 0px 0px; }
+  100% {
+    background-position: 0px -451px; } }
+
+@keyframes animatedBackground {
+  0 {
+    background-position: 0px 0px; }
+  100% {
+    background-position: 0px -451px; } }
+
+#main_sect {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../../img/space.jpg");
+  -webkit-background-size: cover;
+          background-size: cover;
+  animation: animatedBackground 100s linear infinite;
+  -moz-animation: animatedBackground 100s linear infinite;
+  -webkit-animation: animatedBackground 100s linear infinite;
+  -o-animation: animatedBackground 100s linear infinite; }
 
 @font-face {
   font-family: 'Roboto';
@@ -82,6 +109,12 @@ a {
 
 .header {
   background-color: #000000; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .header .header_cont {
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
   .header .logo_container {
     margin-top: 36px;
     margin-bottom: 41px; }
@@ -94,13 +127,36 @@ a {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center; }
+    .header .nav .hamburder_icon {
+      position: absolute; }
     .header .nav .nav_item {
+      z-index: 1;
+      display: inline-block;
+      position: relative;
       color: #ffffff;
       font-size: 1.125em;
       margin-left: 0px;
       margin-right: 25px; }
       .header .nav .nav_item:hover {
         color: #f3a10d; }
+    .header .nav .nav_item:before {
+      content: "";
+      opacity: 0;
+      top: -48px;
+      left: -43px;
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: url("../../img/hex2.png") no-repeat; }
+    .header .nav .nav_item:after {
+      content: "";
+      opacity: 0;
+      top: -36px;
+      left: -4px;
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: url("../../img/hex3.png") no-repeat; }
   .header .head_select {
     display: -webkit-box;
     display: -webkit-flex;
@@ -130,36 +186,86 @@ a {
       outline: 0; }
 
 .main_sect {
-  background: url("../../img/bg_2.png") -157px 264px no-repeat, url("../../img/bg_3.png") 0px -16px no-repeat, url("../../img/space.jpg") 0px -355px no-repeat;
-  -webkit-background-size: auto, cover, cover;
-          background-size: auto, cover, cover; }
+  -webkit-background-size: cover;
+          background-size: cover; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .main_sect {
+      background: url("../../img/bg_2.png") -157px 264px no-repeat, url("../../img/bg_3.png") -600px -16px no-repeat, url("../../img/space.jpg") -1000px -700px no-repeat;
+      -webkit-background-size: auto, cover, cover;
+              background-size: auto, cover, cover; } }
   .main_sect .main_sect_container {
+    background: url("../../img/ball_01.png") 100px 106px no-repeat, url("../../img/ball_02.png") 269px 115px no-repeat, url("../../img/ball_03.png") 473px 188px no-repeat, url("../../img/ball_04.png") 632px 289px no-repeat, url("../../img/ball_05.png") 704px 380px no-repeat;
     position: relative;
-    color: #ffffff; }
+    color: #ffffff;
+    /*
+		.orangehex{
+			margin-top: 57px;
+			display: inline-block;
+			position: relative;
+  			width: 104px; 
+  			height: 60.04px;
+  			background-color: #f3a10dab;
+  			margin: 30.02px 0;
+  			z-index: 10;
+  			margin-top: 12px;
+  			
+  			}
+		.orangehex:before,
+		.orangehex:after {
+			  content: "";
+			  position: absolute;
+			  width: 0;
+			  border-left: 52px solid transparent;
+			  border-right: 52px solid transparent;
+			  margin-left: -50%;
+			}
+
+		.orangehex:before {
+		  bottom: 100%;
+		  border-bottom: 30.02px solid #f3a10dab;
+		  margin-left: -50%;
+		}
+
+		.orangehex:after {
+		  top: 100%;
+		  width: 0;
+		  border-top: 30.02px solid #f3a10dab;
+		  margin-left: -50%;
+		}
+*/ }
     .main_sect .main_sect_container .main_tittle {
-      margin-top: 168px;
+      margin-top: 160px;
       font-size: 1.612em; }
     .main_sect .main_sect_container .hexagon {
       margin-top: 115px;
       position: relative;
-      width: 400px;
-      height: 230.94px;
+      width: 432px;
+      height: 249.42px;
       background-color: #000000ab;
       margin: 115.47px 0; }
+      @media (min-width: 576px) and (max-width: 767px) {
+        .main_sect .main_sect_container .hexagon {
+          width: 325px;
+          height: 187.75px; } }
     .main_sect .main_sect_container .hexagon:before,
     .main_sect .main_sect_container .hexagon:after {
       content: "";
       position: absolute;
       width: 0;
-      border-left: 200px solid transparent;
-      border-right: 200px solid transparent;
+      border-left: 216px solid transparent;
+      border-right: 216px solid transparent;
       margin-left: -50%; }
+      @media (min-width: 576px) and (max-width: 767px) {
+        .main_sect .main_sect_container .hexagon:before,
+        .main_sect .main_sect_container .hexagon:after {
+          border-left: 162px solid transparent;
+          border-right: 162px solid transparent; } }
     .main_sect .main_sect_container .hexagon:before {
       bottom: 100%;
       border-bottom: 115.47px solid #000000ab; }
     .main_sect .main_sect_container .hexagon:after {
       top: 100%;
-      margin-left: -60%;
+      margin-left: -50%;
       border-top: 115.47px solid #000000ab; }
     .main_sect .main_sect_container .info_about {
       margin-bottom: 146px;
@@ -170,7 +276,31 @@ a {
       text-align: center;
       background-color: #000000ab; }
       .main_sect .main_sect_container .info_about .info_tittle {
+        margin-bottom: 45px;
         font-size: 1.875em; }
+    .main_sect .main_sect_container .info_btn {
+      width: 146px;
+      height: 125px;
+      margin: 29px 79px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      z-index: 10;
+      position: absolute;
+      overflow: visible;
+      background: url(../../img/hex.png) 16px -2px no-repeat; }
+    .main_sect .main_sect_container .learn_m:hover, .main_sect .main_sect_container .learn_m:active {
+      text-decoration: none;
+      color: #ffffff; }
     .main_sect .main_sect_container .scroll_down {
       position: absolute;
       font-size: 0.875em;
@@ -183,8 +313,29 @@ a {
       top: 44%;
       right: 10px; }
       .main_sect .main_sect_container .main_nav .main_nav_list {
-        list-style: none; }
+        list-style: none;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: end;
+        -webkit-align-items: flex-end;
+            -ms-flex-align: end;
+                align-items: flex-end; }
+        .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a {
+          text-decoration: none;
+          color: rgba(0, 0, 0, 0); }
+          .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a:hover, .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a:active {
+            color: #ffffff; }
+        .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item .main_nav_href {
+          padding-right: 20px; }
         .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item .main_nav_item_icon {
+          display: inline-block;
           width: 21px;
           height: 23px;
           background: url(../../img/main_nav.png) 0px 25px; }
