--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -1,4 +1,10 @@
+.fly_car{
+	position: absolute;
+	bottom: 0;
+}
+
 .header{
+
 	background-color: $black;
 	@extend %USHText;
 	@extend %textUp;
@@ -85,12 +91,40 @@
 
 .main_sect{
 	background-size: cover;
-	@include md{
-		background: url("../../img/bg_2.png") -157px 264px no-repeat, url("../../img/bg_3.png") -600px -16px no-repeat, url("../../img/space.jpg") -1000px -700px no-repeat;
-		background-size: auto, cover, cover;
+	
+	.main_sect_2{
+
 	}
 	.main_sect_container{
-		background: url("../../img/ball_01.png") 100px 106px no-repeat, url("../../img/ball_02.png") 269px 115px no-repeat, url("../../img/ball_03.png") 473px 188px no-repeat, url("../../img/ball_04.png") 632px 289px no-repeat, url("../../img/ball_05.png") 704px 380px no-repeat;
+		.ball_con{
+			margin-top: 101px;
+			background: transparent;
+			display: flex;
+    		align-items: flex-end;
+			list-style: none;
+			.ball{
+				margin-left: 12px;
+			}
+			.ball_1{
+				margin-right: 23px;
+    			margin-left: 57px;
+			}
+			.ball_2{
+			}
+			.ball_3{
+				margin-bottom: -28px;
+    			margin-left: 38px;
+			}
+			.ball_4{
+				margin-bottom: -88px;
+    			margin-left: 27px;
+			}
+			.ball_5{
+				margin-bottom: -229px;
+    			margin-left: -2px;
+			}
+
+		}
 		position: relative;
 		@extend %USHText;
 		color: $white;
@@ -137,7 +171,7 @@
 		}
 
 		.info_about{
-			
+			margin-left: 105px;
 			margin-bottom: 146px;
     		margin-top: 172px;
 			@include paddingLR(66px, 66px);
