--- a/app/style/scss/_variabless.scss
+++ b/app/style/scss/_variabless.scss
@@ -11,7 +11,9 @@ $black: #000000;
 .orange{
 	color: orange;
 }
-
+.opacity{
+	opacity: 0;
+}
 	
 
 //Media 
@@ -98,33 +100,6 @@ $black: #000000;
 	font-family: 'FontAwesome', sans-serif;
 	font-weight: 400;
 }
-@mixin hexagonBase( $hexagonWidth){
-	position: relative;
-	width: $hexagonWidth; 
-	height: calc($hexagonWidth/1.731);
-	background-color: $orange;
-	margin: 115.47px 0;
-		&:before,
-		&:after {
-			content: "";
-			position: absolute;
-			width: 0;
-			border-left: calc($hexagonWidth/2) solid transparent;
-			border-right: calc($hexagonWidth/2) solid transparent;
-			margin-left: -50%;
-			}
-
-		&:before {
-			bottom: 100%;
-			border-bottom: 115.47px solid #000000ab;
-		}
-
-		&:after {
-		  top: 100%;
-		  margin-left: -60%;
-		  border-top: 115.47px solid #000000ab;
-		}
-}
 
 //General styles
 html{
@@ -142,25 +117,68 @@ a{
 		color: $orange;
 	}
 }
+//orangehex
+/*
+.orangehex{
+	margin-top: 57px;
+	display: inline-block;
+	position: relative;
+  	width: 104px; 
+  	height: 60.04px;
+  	background-color: #f3a10dab;
+  	margin: 30.02px 0;
+  	z-index: 10;
+  	margin-top: 12px;
+  }
+	.orangehex:before,
+	.orangehex:after {
+		content: "";
+		position: absolute;
+		width: 0;
+		border-left: 52px solid transparent;
+		border-right: 52px solid transparent;
+		margin-left: -50%;
+	}
 
+	.orangehex:before {
+		bottom: 100%;
+		border-bottom: 30.02px solid #f3a10dab;
+		margin-left: -50%;
+	}
 
-@keyframes animatedBackground {
-    0 {
-        background-position: 0px 0px
-    }
-    100% {
-        background-position: 0px -451px
-    }
+	.orangehex:after {
+		top: 100%;
+		width: 0;
+		border-top: 30.02px solid #f3a10dab;
+		margin-left: -50%;
+	}
+//orangehex_min
+
+.orangehex_min{
+  	position: relative;
+  	width: 40px; 
+  	height: 23.09px;
+  	background-color: #f3a10dab;
+  	margin: 11.55px 0;
 }
 
-#main_sect{
-	height: 100vh;
-	width:100%;
-	background-image: url("../../img/space.jpg");
-	background-size: cover;
-	animation: animatedBackground 100s linear infinite;
-	-moz-animation: animatedBackground 100s linear infinite;
-	-webkit-animation: animatedBackground 100s linear infinite;
- 	-o-animation: animatedBackground 100s linear infinite;
-	
+.orangehex_min:before,
+.orangehex_min:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
 }
+
+.orangehex_min:before {
+  bottom: 100%;
+  border-bottom: 11.55px solid #f3a10dab;
+}
+
+.oranbgehex_min:after {
+  top: 100%;
+  width: 0;
+  border-top: 11.55px solid #f3a10dab;
+}
+*/
