--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -23,150 +23,6 @@ a {
   a:hover {
     color: #f3a10d; }
 
-<<<<<<< HEAD
-/*
-.orangehex{
-	margin-top: 57px;
-	display: inline-block;
-	position: relative;
-  	width: 104px; 
-  	height: 60.04px;
-  	background-color: #f3a10dab;
-  	margin: 30.02px 0;
-  	z-index: 10;
-  	margin-top: 12px;
-  }
-	.orangehex:before,
-	.orangehex:after {
-		content: "";
-		position: absolute;
-		width: 0;
-		border-left: 52px solid transparent;
-		border-right: 52px solid transparent;
-		margin-left: -50%;
-	}
-
-	.orangehex:before {
-		bottom: 100%;
-		border-bottom: 30.02px solid #f3a10dab;
-		margin-left: -50%;
-	}
-
-	.orangehex:after {
-		top: 100%;
-		width: 0;
-		border-top: 30.02px solid #f3a10dab;
-		margin-left: -50%;
-	}
-//orangehex_min
-=======
-@-webkit-keyframes animatedBackground {
-  0 {
-    background-position: -250px -200px; }
-  100% {
-    background-position: 0px -60px; } }
-
-@keyframes animatedBackground {
-  0 {
-    background-position: -250px -200px; }
-  100% {
-    background-position: 0px -60px; } }
-
-@-webkit-keyframes balkon {
-  0 {
-    -webkit-background-size: 104% 104%;
-            background-size: 104%; }
-  25% {
-    -webkit-background-size: 103% 103%;
-            background-size: 103%; }
-  50% {
-    -webkit-background-size: 102% 102%;
-            background-size: 102%; }
-  75% {
-    -webkit-background-size: 101% 101%;
-            background-size: 101%; }
-  100% {
-    -webkit-background-size: 100% 100%;
-            background-size: 100%; } }
-
-@keyframes balkon {
-  0 {
-    -webkit-background-size: 104% 104%;
-            background-size: 104%; }
-  25% {
-    -webkit-background-size: 103% 103%;
-            background-size: 103%; }
-  50% {
-    -webkit-background-size: 102% 102%;
-            background-size: 102%; }
-  75% {
-    -webkit-background-size: 101% 101%;
-            background-size: 101%; }
-  100% {
-    -webkit-background-size: 100% 100%;
-            background-size: 100%; } }
-
-@-webkit-keyframes Ball {
-  0 {
-    background-position: 100px 106px; }
-  50% {
-    background-position: 100px 40px; }
-  100% {
-    background-position: 100px 106px; } }
-
-@keyframes Ball {
-  0 {
-    background-position: 100px 106px; }
-  50% {
-    background-position: 100px 40px; }
-  100% {
-    background-position: 100px 106px; } }
-
-#balkon {
-  height: auto;
-  width: 100%;
-  background-image: url("../../img/bg_3.png");
-  -webkit-animation: balkon 10s linear forwards;
-          animation: balkon 10s linear forwards; }
-
-#earth {
-  height: auto;
-  width: 100%;
-  background-image: url("../../img/space.jpg");
-  -webkit-background-size: cover;
-          background-size: cover;
-  -webkit-animation: animatedBackground 13.0s linear forwards;
-          animation: animatedBackground 13.0s linear forwards; }
->>>>>>> bebdfb258719eb04e68bd65c93f002e348dc917c
-
-.orangehex_min{
-  	position: relative;
-  	width: 40px; 
-  	height: 23.09px;
-  	background-color: #f3a10dab;
-  	margin: 11.55px 0;
-}
-
-.orangehex_min:before,
-.orangehex_min:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-}
-
-.orangehex_min:before {
-  bottom: 100%;
-  border-bottom: 11.55px solid #f3a10dab;
-}
-
-.oranbgehex_min:after {
-  top: 100%;
-  width: 0;
-  border-top: 11.55px solid #f3a10dab;
-}
-*/
 @font-face {
   font-family: 'Roboto';
   src: url("../../fonts/Roboto Bold.woff2") format("woff2"), url("../../fonts/Roboto Bold.woff") format("woff");
@@ -230,10 +86,6 @@ a {
   font-style: normal;
   font-stretch: normal;
   unicode-range: U+0020-00D8; }
-
-.fly_car {
-  position: absolute;
-  bottom: 0; }
 
 .header {
   background-color: #000000; }
@@ -336,47 +188,7 @@ a {
           background-size: cover; }
   .main_sect .main_sect_container {
     position: relative;
-<<<<<<< HEAD
     color: #ffffff; }
-=======
-    color: #ffffff;
-    /*
-		.orangehex{
-			margin-top: 57px;
-			display: inline-block;
-			position: relative;
-  			width: 104px; 
-  			height: 60.04px;
-  			background-color: #f3a10dab;
-  			margin: 30.02px 0;
-  			z-index: 10;
-  			margin-top: 12px;
-  			
-  			}
-		.orangehex:before,
-		.orangehex:after {
-			  content: "";
-			  position: absolute;
-			  width: 0;
-			  border-left: 52px solid transparent;
-			  border-right: 52px solid transparent;
-			  margin-left: -50%;
-			}
-
-		.orangehex:before {
-		  bottom: 100%;
-		  border-bottom: 30.02px solid #f3a10dab;
-		  margin-left: -50%;
-		}
-
-		.orangehex:after {
-		  top: 100%;
-		  width: 0;
-		  border-top: 30.02px solid #f3a10dab;
-		  margin-left: -50%;
-		}
-*/ }
->>>>>>> bebdfb258719eb04e68bd65c93f002e348dc917c
     .main_sect .main_sect_container .ball_con {
       margin-top: 101px;
       background: transparent;
@@ -535,39 +347,39 @@ a {
 
 @-webkit-keyframes balkon {
   0 {
-    -webkit-background-size: 104% 104%;
-            background-size: 104%; }
+    -webkit-transform: scale(1.04);
+            transform: scale(1.04); }
   25% {
-    -webkit-background-size: 103% 103%;
-            background-size: 103%; }
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03); }
   50% {
-    -webkit-background-size: 102% 102%;
-            background-size: 102%; }
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02); }
   75% {
-    -webkit-background-size: 101% 101%;
-            background-size: 101%; }
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01); }
   100% {
-    -webkit-background-size: 100% 100%;
-            background-size: 100%; } }
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
 
 @keyframes balkon {
   0 {
-    -webkit-background-size: 104% 104%;
-            background-size: 104%; }
+    -webkit-transform: scale(1.04);
+            transform: scale(1.04); }
   25% {
-    -webkit-background-size: 103% 103%;
-            background-size: 103%; }
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03); }
   50% {
-    -webkit-background-size: 102% 102%;
-            background-size: 102%; }
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02); }
   75% {
-    -webkit-background-size: 101% 101%;
-            background-size: 101%; }
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01); }
   100% {
-    -webkit-background-size: 100% 100%;
-            background-size: 100%; } }
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
 
-@-webkit-keyframes Ball_1 {
+@-webkit-keyframes Ball {
   0 {
     -webkit-transform: translate(0px, 25px);
             transform: translate(0px, 25px); }
@@ -578,7 +390,7 @@ a {
     -webkit-transform: translate(0px, 7px);
             transform: translate(0px, 7px); } }
 
-@keyframes Ball_1 {
+@keyframes Ball {
   0 {
     -webkit-transform: translate(0px, 25px);
             transform: translate(0px, 25px); }
@@ -591,49 +403,50 @@ a {
 
 #balkon {
   background-image: url("../../img/bg_3.png");
-  -webkit-background-size: 104% 104%;
-          background-size: 104%;
+  -webkit-transform: scale(1.04);
+      -ms-transform: scale(1.04);
+          transform: scale(1.04);
   background-position: center center;
-  -webkit-animation: balkon 10s linear forwards;
-          animation: balkon 10s linear forwards; }
+  -webkit-animation: balkon 6s linear forwards;
+          animation: balkon 6s linear forwards; }
 
 #fly_car {
   position: absolute;
-  -webkit-transform: translate(-5%, 56%);
-      -ms-transform: translate(-5%, 56%);
-          transform: translate(-5%, 56%); }
+  -webkit-transform: translate(-5%, 58%);
+      -ms-transform: translate(-5%, 58%);
+          transform: translate(-5%, 58%); }
 
 .ball_1 {
-  -webkit-animation: Ball_1 2s linear forwards infinite;
-          animation: Ball_1 2s linear forwards infinite; }
+  -webkit-animation: Ball 2s linear forwards infinite;
+          animation: Ball 2s linear forwards infinite; }
 
 .ball_2 {
-  -webkit-animation: Ball_1 2.5s linear forwards infinite;
-          animation: Ball_1 2.5s linear forwards infinite;
+  -webkit-animation: Ball 2.5s linear forwards infinite;
+          animation: Ball 2.5s linear forwards infinite;
   -webkit-animation-delay: 0.5s;
           animation-delay: 0.5s; }
 
 .ball_3 {
-  -webkit-animation: Ball_1 1.7s linear forwards infinite;
-          animation: Ball_1 1.7s linear forwards infinite;
+  -webkit-animation: Ball 1.7s linear forwards infinite;
+          animation: Ball 1.7s linear forwards infinite;
   -webkit-animation-delay: 0s;
           animation-delay: 0s; }
 
 .ball_4 {
-  -webkit-animation: Ball_1 2.5s linear forwards infinite;
-          animation: Ball_1 2.5s linear forwards infinite;
+  -webkit-animation: Ball 2.5s linear forwards infinite;
+          animation: Ball 2.5s linear forwards infinite;
   -webkit-animation-delay: 0.5s;
           animation-delay: 0.5s; }
 
 .ball_4 {
-  -webkit-animation: Ball_1 2.5s linear forwards infinite;
-          animation: Ball_1 2.5s linear forwards infinite;
+  -webkit-animation: Ball 2.5s linear forwards infinite;
+          animation: Ball 2.5s linear forwards infinite;
   -webkit-animation-delay: 0s;
           animation-delay: 0s; }
 
 .ball_5 {
-  -webkit-animation: Ball_1 2.5s linear forwards infinite;
-          animation: Ball_1 2.5s linear forwards infinite;
+  -webkit-animation: Ball 2.5s linear forwards infinite;
+          animation: Ball 2.5s linear forwards infinite;
   -webkit-animation-delay: 0.5s;
           animation-delay: 0.5s; }
 
